tests/sksl/errors/ArrayReturnTypes.sksl
float4x4[2] return_float4x4_2() {}
int[1]      return_int_1()      {}
